Wsio 521 add preconnect (#397)
* WSIO-521 add gstatic preconnect

* WSIO-521 add gstatic preconnect

--- a/applications/common/backend/src/main/resources/libs/kyanite/common/components/page/head-libs.html
+++ b/applications/common/backend/src/main/resources/libs/kyanite/common/components/page/head-libs.html
@@ -27,6 +27,7 @@
 </script>
 <!-- End Google Tag Manager -->
 
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link
   data-sly-attribute.crossorigin="${wcmmode.isEdit ? 'anonymous' : ''}"
   rel="stylesheet"
