--- a/applications/common/frontend/src/atomic-design-system/03-organism/o.hero/o.hero.scss
+++ b/applications/common/frontend/src/atomic-design-system/03-organism/o.hero/o.hero.scss
@@ -53,7 +53,7 @@
         row-gap: var(--spacing-6_3);
       }
 
-      *:not(.eyebrow) {
+      *:not(.eyebrow, .button) {
         @extend .my-0;
       }
 
