WSIO-543 Add title for the code snippet

--- a/applications/common/frontend/src/components/CodeSnippet/codesnippet.scss
+++ b/applications/common/frontend/src/components/CodeSnippet/codesnippet.scss
@@ -50,6 +50,10 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+
+    &__file-name {
+      word-wrap: anywhere;
+    }
   }
 
   // code
