[KYAN-46] Add width and height to Author image on featuredblogarticle.html

--- a/applications/blogs/backend/src/main/resources/libs/kyanite/blogs/components/featuredblogarticle/featuredblogarticle.html
+++ b/applications/blogs/backend/src/main/resources/libs/kyanite/blogs/components/featuredblogarticle/featuredblogarticle.html
@@ -42,7 +42,7 @@
               </p>
               <div class="content-info-details">
                 <span class="image is-32x32">
-                  <img class="is-rounded" data-sly-test.authorPhoto="${article.authorPhoto}" class="is-rounded"
+                  <img class="is-rounded" width="32" height="32" data-sly-test.authorPhoto="${article.authorPhoto}" class="is-rounded"
                       src="${authorPhoto}" alt="${article.authorPhotoAlt}">
                 </span>
 
