[KYAN-46] Add width and height to images on blogarticleheader.html

--- a/applications/blogs/backend/src/main/resources/libs/kyanite/blogs/components/blogarticleheader/blogarticleheader.html
+++ b/applications/blogs/backend/src/main/resources/libs/kyanite/blogs/components/blogarticleheader/blogarticleheader.html
@@ -30,7 +30,7 @@
     <article class="media">
       <figure class="media-left">
         <p class="image is-48x48">
-          <img data-sly-test.authorPhoto="${blog.authorPhoto}" class="is-rounded"
+          <img width="48" height="48"  data-sly-test.authorPhoto="${blog.authorPhoto}" class="is-rounded"
                src="${authorPhoto}" alt="${blog.authorPhotoAlt}">
         </p>
       </figure>
@@ -48,7 +48,7 @@
       </div>
     </article>
     <figure class="image">
-      <img data-sly-test.heroImage="${blog.heroImage}" src="${heroImage}"
+      <img width="1200" height="800" data-sly-test.heroImage="${blog.heroImage}" src="${heroImage}"
            alt="${blog.heroImageAlt}">
     </figure>
   </div>
