WSIO-527 Fix feature blog post image alt attribute

--- a/applications/blogs/backend/src/main/resources/libs/kyanite/blogs/components/featuredblogarticle/featuredblogarticle.html
+++ b/applications/blogs/backend/src/main/resources/libs/kyanite/blogs/components/featuredblogarticle/featuredblogarticle.html
@@ -23,7 +23,7 @@
         <div class="column">
           <figure class="image-hero">
             <img data-sly-test.heroImage="${article.heroImage}" src="${heroImage}"
-                 alt="${model.heroImageAlt}">
+                 alt="${article.heroImageAlt}">
           </figure>
         </div>
         <div class="column">
