WSIO-527 Fix accessibility issues in the contact form

--- a/applications/common/backend/src/main/resources/libs/kyanite/common/components/contactform/contactform.html
+++ b/applications/common/backend/src/main/resources/libs/kyanite/common/components/contactform/contactform.html
@@ -26,8 +26,8 @@
       <div class="control">
         <div class="select">
           <select required
-                  tabindex="1"
-                  name="type">
+                  name="type"
+                  aria-label="Type of inquiry">
             <option disabled selected value>Select an option</option>
             <sly data-sly-list.item="${model.types}">
               <option
