--- a/applications/common/backend/src/main/resources/libs/kyanite/common/components/image/template.html
+++ b/applications/common/backend/src/main/resources/libs/kyanite/common/components/image/template.html
@@ -15,23 +15,25 @@
 */-->
 
 <template data-sly-template.image="${ @ model }">
-  <sly data-sly-set.shadowClass="${model.hasShadow ? 'has-shadow' : ''}"></sly>
+  <a href="${model.url}" target="${model.openInNewTab ? '_blank' : ''}" data-sly-unwrap="${!model.url || model.url == ''}">
+    <sly data-sly-set.shadowClass="${model.hasShadow ? 'has-shadow' : ''}"></sly>
 
-  <sly data-sly-test.isSvg="${model.isSvg && !model.isAnyMediaAsset && model.isCodeSvg}">
-    <span class="image ${model.style} ${shadowClass}">${model.svgDocument @ context='unsafe'}</span>
-  </sly>
+    <sly data-sly-test.isSvg="${model.isSvg && !model.isAnyMediaAsset && model.isCodeSvg}">
+      <span class="image ${model.style} ${shadowClass}">${model.svgDocument @ context='unsafe'}</span>
+    </sly>
 
-  <sly data-sly-test="${!isSvg}">
-    <figure class="image ${model.style} ${shadowClass}">
-      <sly data-sly-test.isVideo="${model.isVideo}">
-        <sly data-sly-call="${video @ model=model}"></sly>
-      </sly>
+    <sly data-sly-test="${!isSvg}">
+      <figure class="image ${model.style} ${shadowClass}">
+        <sly data-sly-test.isVideo="${model.isVideo}">
+          <sly data-sly-call="${video @ model=model}"></sly>
+        </sly>
 
-      <sly data-sly-test="${!isVideo}">
-        <sly data-sly-call="${picture @ model=model}"></sly>
-      </sly>
-    </figure>
-  </sly>
+        <sly data-sly-test="${!isVideo}">
+          <sly data-sly-call="${picture @ model=model}"></sly>
+        </sly>
+      </figure>
+    </sly>
+  </a>
 </template>
 
 <template data-sly-template.picture="${ @ model }">
