KYAN-169 fix active Tab condition for editMode

--- a/applications/common/backend/src/main/resources/libs/kyanite/common/components/tabs/tab/tab.html
+++ b/applications/common/backend/src/main/resources/libs/kyanite/common/components/tabs/tab/tab.html
@@ -24,7 +24,7 @@
                     <ul>
                         <sly data-sly-list="${parent.children}">
                             <sly data-sly-test="${item.resourceType == 'kyanite/common/components/tabs/tab'}">
-                                <sly data-sly-test.isCurrent="${model.label == item.label}"></sly>
+                                <sly data-sly-test.isCurrent="${resource.path == item.path}"></sly>
                                 <li class="${isCurrent ? 'is-active' : ''}"
                                     data-target="${item.label}">
                                         <sly data-sly-test="${item.addIcon && item.icon && isCurrent}">
