KYAN-169 override Bulma styles for link inside of Tab's label

--- a/applications/common/frontend/src/atomic-design-system/01-atom/a.link.scss
+++ b/applications/common/frontend/src/atomic-design-system/01-atom/a.link.scss
@@ -71,3 +71,10 @@
     font-size: var(--font-size-20);
   }
 }
+
+@mixin a-link-reset {
+  display: inline;
+  border: none;
+  color: var(--color-link--700);
+  border-bottom-color: var(--color-link--700);
+}
