--- a/applications/common/frontend/src/components/Tabs/Tabs.scss
+++ b/applications/common/frontend/src/components/Tabs/Tabs.scss
@@ -45,14 +45,12 @@
             @extend .pb-3;
             @extend .pt-3;
             @extend .pr-3;
-              opacity: 0.5;
               width: 100%;
               border-bottom: none;
               border-right: var(--border-weight-2) solid;
               border-color: transparent;
               &.is-active {
                 border-color: var(--color-primary--600) !important;
-                opacity: 1;
               }
            }
          }
@@ -69,17 +67,32 @@
       border-bottom: none;
       li {
         border-bottom: var(--border-weight-2) solid;
-        opacity: 0.5;
         border-color: transparent;
         &.is-active {
           border-color: var(--color-primary--600) !important;
-          opacity: 1;
         }
       }
     }
   }
 }
 /* editMode styles end */
+
+/*  multimode styles start */
+$transparent-tabs-containers: tabs-container, tabs-container-edit;
+
+.tabs-container, .tabs-container-edit {
+  .tabs {
+    ul {
+      li {
+        opacity: 0.5;
+        &.is-active {
+          opacity: 1;
+        }
+      }
+    }
+  }
+}
+/* multimode styles end */
 
 .tabs-container {
   @extend .mb-4;
