--- a/applications/common/backend/src/main/resources/libs/kyanite/common/components/title/title.html
+++ b/applications/common/backend/src/main/resources/libs/kyanite/common/components/title/title.html
@@ -47,7 +47,16 @@
           </div>
         </sly>
         <!--/* end */-->
-        <span class="${model.endingsClasses @ join=' '} typed-animation" data-show-cursor="${model.showCursor}" data-endings="${model.endingJson}" data-speed="${model.speed}" data-delay="${model.delay}"></span>
+
+          <!--/* on load to prevent content shift */-->
+          <sly data-sly-list.child="${model.endings}">
+            <sly data-sly-test="${childList.last}">
+              <span class="typed-first has-text-gradient ${model.endingsClasses @ join=' '}">${child.value}</span>
+            </sly>
+          </sly>
+        <!--/* end */-->
+        <span class="${model.endingsClasses @ join=' '} typed-animation" data-show-cursor="${model.showCursor}" data-endings="${model.endingJson}" data-speed="${model.speed}" data-delay="${model.delay}">
+        </span>
         <sly data-sly-test="${!model.showCursor}"><span class="typed-cursor" style="visibility: hidden" aria-hidden="true">|</span></sly>
       </div>
     </sly>
