WSIO-523 add lazy loading to img, expand section component with img option

--- a/applications/blogs/backend/src/main/resources/libs/kyanite/blogs/components/bloglist/bloglist.html
+++ b/applications/blogs/backend/src/main/resources/libs/kyanite/blogs/components/bloglist/bloglist.html
@@ -22,7 +22,7 @@
       <a href="${item.link}" class="column is-4-desktop article-thumbnail">
         <div class="has-text-centered image-hero">
           <img data-sly-test.heroImage="${item.blogArticleHeader.heroImage}" src="${heroImage}"
-               alt="${item.blogArticleHeader.heroImageAlt}">
+               alt="${item.blogArticleHeader.heroImageAlt}" loading="lazy">
         </div>
         <div class="content">
           <div class="content-info">
