--- a/applications/common/backend/src/main/resources/libs/kyanite/common/components/card/template.html
+++ b/applications/common/backend/src/main/resources/libs/kyanite/common/components/card/template.html
@@ -24,7 +24,7 @@
         <source media="(max-width:1023px)" srcset="${model.tabletAssetReference @ context='uri'}"/>
       </sly>
 
-      <img src="${model.image.assetReference}" width="${model.image.width}" height="${model.image.height}" alt="${model.image.alt}"/>
+      <img src="${model.image.assetReference}" width="${model.image.width}" height="${model.image.height}" alt="${model.image.alt}" loading="lazy" />
     </picture>
   </figure>
 </template>
