--- a/applications/common/frontend/src/main.scss
+++ b/applications/common/frontend/src/main.scss
@@ -16,6 +16,7 @@
  * -->
  */
 @use '../node_modules/@glidejs/glide/src/assets/sass/glide.core.scss';
+@use '../node_modules/viewerjs/dist/viewer.min.css';
 @use 'src/global-variables';
 @use 'src/bulma-overwrite';
 @use 'src/components';
