--- a/applications/common/backend/src/main/resources/libs/kyanite/common/components/image/template.html
+++ b/applications/common/backend/src/main/resources/libs/kyanite/common/components/image/template.html
@@ -45,7 +45,7 @@
       <source media="(max-width:1023px)" srcset="${model.tabletAssetReference @ context='uri'}"/>
     </sly>
 
-    <img class="${model.isRounded ? 'is-rounded' : ''}${model.showLightbox ? ' image--lightbox' : ''}" width="${model.width}" height="${model.height}"  src="${model.assetReference}" alt="${model.alt}" loading="lazy">
+    <img class="${model.isRounded ? 'is-rounded' : ''}${model.showLightbox ? ' image--lightbox' : ''}" width="${model.width}" height="${model.height}"  src="${model.assetReference}" alt="${model.alt}" data-lightbox-asset="${model.highResolutionAssetSrc}" loading="lazy">
   </picture>
 </template>
 
