--- a/applications/common/frontend/src/atomic-design-system/00-token/t.color/t.color.scss
+++ b/applications/common/frontend/src/atomic-design-system/00-token/t.color/t.color.scss
@@ -67,49 +67,49 @@ $map_t-color-by-id: (
   grey--900: #2a2a2a,
   grey--1000: #181818,
   //
-  danger--100: #fee9ea,
-  danger--200: #fcbdc0,
-  danger--300: #fa9196,
-  danger--400: #f8646c,
-  danger--500: #f7434d,
-  danger--600: #f5222d,
-  danger--700: #d01d26,
-  danger--800: #ac181f,
-  danger--900: #7b1117,
-  danger--1000: #4a0a0e,
-  //
-  warning--100: #fffbe8,
-  warning--200: #fef4b9,
-  warning--300: #fded8a,
-  warning--400: #fce65b,
-  warning--500: #fbe037,
-  warning--600: #fadb14,
-  warning--700: #d5ba11,
-  warning--800: #af990e,
-  warning--900: #7d6e0a,
-  warning--1000: #4b4206,
-  //
-  success--100: #eef9e8,
-  success--200: #cbedba,
-  success--300: #a9e28d,
-  success--400: #86d65f,
-  success--500: #6ccd3c,
-  success--600: #52c41a,
-  success--700: #46a716,
-  success--800: #398912,
-  success--900: #29620d,
-  success--1000: #193b08,
-  //
-  info--100: #e6f4ff,
-  info--200: #b3dfff,
-  info--300: #80caff,
-  info--400: #4db4ff,
-  info--500: #26a4ff,
-  info--600: #0094ff,
-  info--700: #007ed9,
-  info--800: #0068b3,
-  info--900: #004a80,
-  info--1000: #002c4d,
+  // danger--100: #fee9ea,
+  // danger--200: #fcbdc0,
+  // danger--300: #fa9196,
+  // danger--400: #f8646c,
+  // danger--500: #f7434d,
+  // danger--600: #f5222d,
+  // danger--700: #d01d26,
+  // danger--800: #ac181f,
+  // danger--900: #7b1117,
+  // danger--1000: #4a0a0e,
+  // //
+  // warning--100: #fffbe8,
+  // warning--200: #fef4b9,
+  // warning--300: #fded8a,
+  // warning--400: #fce65b,
+  // warning--500: #fbe037,
+  // warning--600: #fadb14,
+  // warning--700: #d5ba11,
+  // warning--800: #af990e,
+  // warning--900: #7d6e0a,
+  // warning--1000: #4b4206,
+  // //
+  // success--100: #eef9e8,
+  // success--200: #cbedba,
+  // success--300: #a9e28d,
+  // success--400: #86d65f,
+  // success--500: #6ccd3c,
+  // success--600: #52c41a,
+  // success--700: #46a716,
+  // success--800: #398912,
+  // success--900: #29620d,
+  // success--1000: #193b08,
+  // //
+  // info--100: #e6f4ff,
+  // info--200: #b3dfff,
+  // info--300: #80caff,
+  // info--400: #4db4ff,
+  // info--500: #26a4ff,
+  // info--600: #0094ff,
+  // info--700: #007ed9,
+  // info--800: #0068b3,
+  // info--900: #004a80,
+  // info--1000: #002c4d,
 );
 
 $map_t-color-shadows: (
