--- a/applications/common/frontend/src/global-variables.scss
+++ b/applications/common/frontend/src/global-variables.scss
@@ -20,7 +20,7 @@
 @use 'src/atomic-design-system/00-token/t.font' as fonts;
 @use 'src/atomic-design-system/00-token/t.position' as positions;
 @use 'src/atomic-design-system/00-token/t.zindex' as zindex;
-@use 'src/bulma-overwrite/variables' as variables;
+@use 'src/bulma-overwrite/bulma-spacing' as variables;
 
 @mixin add-css-variables($map, $short-name) {  
     @each $key, $value in $map {
@@ -30,16 +30,16 @@
 
 :root {
     // Borders from: src/atomic-design-system/00-token/t.border
-    @include add-css-variables(borders.$map_t-border-weight, border-weight);
-    @include add-css-variables(borders.$map_t-border-radius, border-radius);
+    // @include add-css-variables(borders.$map_t-border-weight, border-weight);
+    // @include add-css-variables(borders.$map_t-border-radius, border-radius);
 
     // Breakpoints from: src/atomic-design-system/00-token/t.breakpoint
     @include add-css-variables(breakpoints.$map_t-breakpoints-px, breakpoint);
 
     // Colors from: src/atomic-design-system/00-token/t.color
-    @include add-css-variables(colors.$map_t-base-color, base-color);
-    @include add-css-variables(colors.$map_t-color-by-id, color);
-    @include add-css-variables(colors.$map_t-color-shadows, color);
+    // @include add-css-variables(colors.$map_t-base-color, base-color);
+    // @include add-css-variables(colors.$map_t-color-by-id, color);
+    // @include add-css-variables(colors.$map_t-color-shadows, color);
 
      // Fonts from: src/atomic-design-system/00-token/t.color
      @include add-css-variables(fonts.$map_t-fonts, font);
