--- a/applications/common/backend/src/main/resources/libs/kyanite/common/components/hero/hero.html
+++ b/applications/common/backend/src/main/resources/libs/kyanite/common/components/hero/hero.html
@@ -1,6 +1,6 @@
 <!--/*
   ~
-  ~     Copyright (C) 2023 Dynamic Solutions
+  ~     Copyright (C) 2024 Dynamic Solutions
   ~
   ~     Licensed under the Apache License, Version 2.0 (the "License");
   ~     you may not use this file except in compliance with the License.
@@ -16,19 +16,19 @@
   ~
 */-->
 
-<sly data-sly-use.model="pl.ds.kyanite.common.components.models.HeroComponent">
-  <sly data-sly-set.classes="hero ${model.heroClasses @ join=' '}"></sly>
-  <sly data-sly-test="${resource.hasChildren}">
+<sly data-sly-use.model="pl.ds.kyanite.common.components.models.HeroComponent"
+     data-sly-set.classes="hero ${model.heroClasses @ join=' '}">
+  <sly data-sly-test="${model.children}">
     <section class="${classes}">
       <div class="hero-body">
-        <sly data-sly-list="${resource.children}">
-          <sly data-sly-resource="${item}"></sly>
+        <sly data-sly-list.child="${model.children}">
+          <sly data-sly-resource="${child.path @ resourceType=child.resourceType}"></sly>
         </sly>
       </div>
     </section>
   </sly>
 </sly>
-<sly data-sly-test="${!resource.hasChildren}">
+<sly data-sly-test="${!model.children}">
   <sly data-sly-use.lib="/libs/wcm/foundation/components/commons/templates.html"
        data-sly-call="${lib.placeholder @ classes=classes}"></sly>
 </sly>
